Cambios Probab. Cancelacion

--- a/notebooks_final/graficos_final.ipynb
+++ b/notebooks_final/graficos_final.ipynb
@@ -38493,6 +38493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CUOTA DE MERCADO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -38579,398 +38586,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_reserva</th>\n",
-       "      <th>id_cliente</th>\n",
-       "      <th>nombre</th>\n",
-       "      <th>apellido</th>\n",
-       "      <th>mail</th>\n",
-       "      <th>competencia</th>\n",
-       "      <th>fecha_reserva</th>\n",
-       "      <th>inicio_estancia</th>\n",
-       "      <th>final_estancia</th>\n",
-       "      <th>id_hotel</th>\n",
-       "      <th>precio_noche</th>\n",
-       "      <th>nombre_hotel</th>\n",
-       "      <th>valoracion</th>\n",
-       "      <th>ciudad</th>\n",
-       "      <th>id_ciudad</th>\n",
-       "      <th>ingreso_reserva</th>\n",
-       "      <th>categoria_cliente</th>\n",
-       "      <th>categoria_hotel</th>\n",
-       "      <th>Desajuste</th>\n",
-       "      <th>Tipo_Reserva</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>ce727457-b05d-4d48-b5e5-002a1a7274a8</td>\n",
-       "      <td>3742</td>\n",
-       "      <td>David</td>\n",
-       "      <td>Julián</td>\n",
-       "      <td>david.julián@example.com</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2025-02-03</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>13</td>\n",
-       "      <td>198.89</td>\n",
-       "      <td>Hotel Palacio Imperial</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>198.89</td>\n",
-       "      <td>High Ticket</td>\n",
-       "      <td>Medio</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>429</th>\n",
-       "      <td>af0d8fa1-4c3f-46d7-beb3-944976dea50c</td>\n",
-       "      <td>13440</td>\n",
-       "      <td>Sofía</td>\n",
-       "      <td>Lamas</td>\n",
-       "      <td>sofía.lamas@example.com</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2025-02-09</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>12</td>\n",
-       "      <td>382.83</td>\n",
-       "      <td>Hotel Monte Verde</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>382.83</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Igual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>590</th>\n",
-       "      <td>aab4eaef-10ef-4162-a487-c006fcdd3eaf</td>\n",
-       "      <td>8331</td>\n",
-       "      <td>Leoncio</td>\n",
-       "      <td>Robledo</td>\n",
-       "      <td>leoncio.robledo@example.com</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2025-02-04</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>8</td>\n",
-       "      <td>486.09</td>\n",
-       "      <td>Hotel Los Almendros</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>486.09</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Igual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1098</th>\n",
-       "      <td>1707d7ca-72ff-4af9-9786-0f39e4504a51</td>\n",
-       "      <td>5033</td>\n",
-       "      <td>Eva</td>\n",
-       "      <td>Bárcena</td>\n",
-       "      <td>eva.bárcena@example.com</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2025-02-06</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>9</td>\n",
-       "      <td>201.79</td>\n",
-       "      <td>Hotel Luz de Madrid</td>\n",
-       "      <td>3.05</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>201.79</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>High Ticket</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1832</th>\n",
-       "      <td>000eecd9-8b82-468f-bbbb-1acffb643f35</td>\n",
-       "      <td>9553</td>\n",
-       "      <td>Marina</td>\n",
-       "      <td>Vargas</td>\n",
-       "      <td>marina.vargas@example.com</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2025-02-05</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>16</td>\n",
-       "      <td>136.77</td>\n",
-       "      <td>Hotel Sol y Luna</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>136.77</td>\n",
-       "      <td>High Ticket</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Upgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14339</th>\n",
-       "      <td>2de93c59-fd50-4de4-8319-bb06e82d9d0b</td>\n",
-       "      <td>11106</td>\n",
-       "      <td>Olalla</td>\n",
-       "      <td>Lillo</td>\n",
-       "      <td>olalla.lillo@example.com</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2025-02-26</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>20</td>\n",
-       "      <td>255.00</td>\n",
-       "      <td>Novotel Madrid Center</td>\n",
-       "      <td>4.60</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>255.00</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Medio</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14571</th>\n",
-       "      <td>04d309d7-325b-4086-864e-fcc630908f2c</td>\n",
-       "      <td>12247</td>\n",
-       "      <td>Reyes</td>\n",
-       "      <td>Cruz</td>\n",
-       "      <td>reyes.cruz@example.com</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2025-02-26</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>28</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>ibis budget Madrid Centro las Ventas</td>\n",
-       "      <td>4.30</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Low Cost</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14714</th>\n",
-       "      <td>ccdfda32-d7c5-4837-b068-76020623b924</td>\n",
-       "      <td>1242</td>\n",
-       "      <td>Anita</td>\n",
-       "      <td>Rueda</td>\n",
-       "      <td>anita.rueda@example.com</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2025-02-26</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>27</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>ibis budget Madrid Calle Alcalá</td>\n",
-       "      <td>4.30</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Low Cost</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14806</th>\n",
-       "      <td>2fc7f17c-5bd7-4e8d-a775-4f364cbbb381</td>\n",
-       "      <td>14033</td>\n",
-       "      <td>Trinidad</td>\n",
-       "      <td>Ramis</td>\n",
-       "      <td>trinidad.ramis@example.com</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2025-02-26</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>25</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>ibis Madrid Calle Alcalá</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Low Cost</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14958</th>\n",
-       "      <td>9c6d21bf-08e2-4d2a-977f-970d207d58cf</td>\n",
-       "      <td>2832</td>\n",
-       "      <td>Che</td>\n",
-       "      <td>Pelayo</td>\n",
-       "      <td>che.pelayo@example.com</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2025-02-26</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>2025-03-02</td>\n",
-       "      <td>24</td>\n",
-       "      <td>116.00</td>\n",
-       "      <td>ibis Madrid Aeropuerto Barajas</td>\n",
-       "      <td>4.40</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>1</td>\n",
-       "      <td>116.00</td>\n",
-       "      <td>Luxury</td>\n",
-       "      <td>Low Cost</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Downgrade</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>81 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 id_reserva  id_cliente    nombre apellido  \\\n",
-       "89     ce727457-b05d-4d48-b5e5-002a1a7274a8        3742     David   Julián   \n",
-       "429    af0d8fa1-4c3f-46d7-beb3-944976dea50c       13440     Sofía    Lamas   \n",
-       "590    aab4eaef-10ef-4162-a487-c006fcdd3eaf        8331   Leoncio  Robledo   \n",
-       "1098   1707d7ca-72ff-4af9-9786-0f39e4504a51        5033       Eva  Bárcena   \n",
-       "1832   000eecd9-8b82-468f-bbbb-1acffb643f35        9553    Marina   Vargas   \n",
-       "...                                     ...         ...       ...      ...   \n",
-       "14339  2de93c59-fd50-4de4-8319-bb06e82d9d0b       11106    Olalla    Lillo   \n",
-       "14571  04d309d7-325b-4086-864e-fcc630908f2c       12247     Reyes     Cruz   \n",
-       "14714  ccdfda32-d7c5-4837-b068-76020623b924        1242     Anita    Rueda   \n",
-       "14806  2fc7f17c-5bd7-4e8d-a775-4f364cbbb381       14033  Trinidad    Ramis   \n",
-       "14958  9c6d21bf-08e2-4d2a-977f-970d207d58cf        2832       Che   Pelayo   \n",
-       "\n",
-       "                              mail  competencia fecha_reserva inicio_estancia  \\\n",
-       "89        david.julián@example.com        False    2025-02-03      2025-03-01   \n",
-       "429        sofía.lamas@example.com        False    2025-02-09      2025-03-01   \n",
-       "590    leoncio.robledo@example.com        False    2025-02-04      2025-03-01   \n",
-       "1098       eva.bárcena@example.com        False    2025-02-06      2025-03-01   \n",
-       "1832     marina.vargas@example.com        False    2025-02-05      2025-03-01   \n",
-       "...                            ...          ...           ...             ...   \n",
-       "14339     olalla.lillo@example.com         True    2025-02-26      2025-03-01   \n",
-       "14571       reyes.cruz@example.com         True    2025-02-26      2025-03-01   \n",
-       "14714      anita.rueda@example.com         True    2025-02-26      2025-03-01   \n",
-       "14806   trinidad.ramis@example.com         True    2025-02-26      2025-03-01   \n",
-       "14958       che.pelayo@example.com         True    2025-02-26      2025-03-01   \n",
-       "\n",
-       "      final_estancia  id_hotel  precio_noche  \\\n",
-       "89        2025-03-02        13        198.89   \n",
-       "429       2025-03-02        12        382.83   \n",
-       "590       2025-03-02         8        486.09   \n",
-       "1098      2025-03-02         9        201.79   \n",
-       "1832      2025-03-02        16        136.77   \n",
-       "...              ...       ...           ...   \n",
-       "14339     2025-03-02        20        255.00   \n",
-       "14571     2025-03-02        28        119.00   \n",
-       "14714     2025-03-02        27         95.00   \n",
-       "14806     2025-03-02        25        119.00   \n",
-       "14958     2025-03-02        24        116.00   \n",
-       "\n",
-       "                               nombre_hotel  valoracion  ciudad  id_ciudad  \\\n",
-       "89                   Hotel Palacio Imperial        3.01  Madrid          1   \n",
-       "429                       Hotel Monte Verde        3.10  Madrid          1   \n",
-       "590                     Hotel Los Almendros        3.01  Madrid          1   \n",
-       "1098                    Hotel Luz de Madrid        3.05  Madrid          1   \n",
-       "1832                       Hotel Sol y Luna        3.01  Madrid          1   \n",
-       "...                                     ...         ...     ...        ...   \n",
-       "14339                 Novotel Madrid Center        4.60  Madrid          1   \n",
-       "14571  ibis budget Madrid Centro las Ventas        4.30  Madrid          1   \n",
-       "14714       ibis budget Madrid Calle Alcalá        4.30  Madrid          1   \n",
-       "14806              ibis Madrid Calle Alcalá        4.50  Madrid          1   \n",
-       "14958        ibis Madrid Aeropuerto Barajas        4.40  Madrid          1   \n",
-       "\n",
-       "       ingreso_reserva categoria_cliente categoria_hotel  Desajuste  \\\n",
-       "89              198.89       High Ticket           Medio       True   \n",
-       "429             382.83            Luxury          Luxury      False   \n",
-       "590             486.09            Luxury          Luxury      False   \n",
-       "1098            201.79            Luxury     High Ticket       True   \n",
-       "1832            136.77       High Ticket          Luxury       True   \n",
-       "...                ...               ...             ...        ...   \n",
-       "14339           255.00            Luxury           Medio       True   \n",
-       "14571           119.00            Luxury        Low Cost       True   \n",
-       "14714            95.00            Luxury        Low Cost       True   \n",
-       "14806           119.00            Luxury        Low Cost       True   \n",
-       "14958           116.00            Luxury        Low Cost       True   \n",
-       "\n",
-       "      Tipo_Reserva  \n",
-       "89       Downgrade  \n",
-       "429          Igual  \n",
-       "590          Igual  \n",
-       "1098     Downgrade  \n",
-       "1832       Upgrade  \n",
-       "...            ...  \n",
-       "14339    Downgrade  \n",
-       "14571    Downgrade  \n",
-       "14714    Downgrade  \n",
-       "14806    Downgrade  \n",
-       "14958    Downgrade  \n",
-       "\n",
-       "[81 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_clientes_doble_reserva = df_final[df_final[\"id_cliente\"].isin(clientes_doble_reserva)]\n",
     "\n",
@@ -39349,7 +38967,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SABEMOS QUE SOLO TENEMOS DATOS DE CLIENTES QUE HAN HECHO DE 1 A 3 RESERVAS, POR LO QUE SOLO PODREMOS SACAR EL DESAJUSTE DE SU CATEGORÍA CON LA DEL HOTEL DE AQUELLOS QUE TENGAN > 1 RESERVA (DE LO CONTRARIO EL GASTO SERÁ IGUAL AL PRECIO POR NOCHE DEL HOTEL EN CUESTIÓN). PERO AÚN ASÍ, ME PARECE INTERESANTE CALCULARLO SI TOMAMOS LA MEDIA DEL GASTO DE LOS CLIENTES DE ESTE DATASET COMO DATOS ANTERIORES DE ESTOS CLIENTES QUE YA TENÍAMOS PARA PODER CLASIFICARLOS POR TIPOS."
+    "SABEMOS QUE SOLO TENEMOS DATOS DE CLIENTES QUE HAN HECHO DE 1 A 3 RESERVAS, POR LO QUE EL DESAJUSTE NO SERÍA REAL YA QUE AL FINAL ESTAS RESERVAS SE CANCELARÍAN AL SER PARA LA MISMA FECHA DE ESTANCIA. ASÍ QUE, PARA CALCULAR EL TIPO DE CLIENTE CREAMOS UNA NUEVA COLUMNA QUE SIMILA EL GASTO MEDIO DE ESE CLIENTE DE MANERA HISTÓRICA:"
    ]
   },
   {
